# HackathonSDSU

./: .gitignore  package-lock.json  package.json
backend/: .env  config.py  db.py  models.py  pyproject.toml
backend/ai/: embeddings.py  indexing.py  retrieval.py  settings.py
backend/app/: ai_companion.ipynb  api.py  config.py  db.py
backend/app/crud/: clubs.py  crud_base.py  financials.py  transactions.py
backend/app/data/: Dummy_transactions.csv  acct-summary.json
backend/app/routers/: clubs.py  financials.py  transactions.py
backend/app/schemas/: clubs.py  financials.py  transactions.py
backend/app/services/: acct-sum-to-json.py  ai_companion.py  json-to-db.py  rag-prompt.py  test.py  upload-transactions.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/Pages/: Dashboard.tsx  Finance.tsx  Forms.tsx  Resources.tsx  Roster.tsx
frontend/src/components/: Chatdock.tsx  Sidebar.tsx  Statcard.tsx
frontend/src/services/: api.ts
