[project]
name = "hackathonsdsu"
version = "0.1.0"
description = "Python backend for our club officer dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.2",
    "pydantic-settings>=2.12.0",
    "supabase>=2.24.0",
    "uvicorn[standard]>=0.38.0",
    "google-generativeai",
    "python-dotenv",
    "langchain-community>=0.4.1",
    "pypdf>=6.2.0",
    "langchain>=1.0.7",
    "dotenv>=0.9.9",
    "sentence-transformers>=5.1.2",
    "langchain-core>=1.0.5",
    "langchain-text-splitters>=1.0.0",
    "langchain-huggingface>=1.0.1",
]
